src/examples/valid/block-or-statement.ra
func test(): int {
  if (true) return 42;
  return 248;
}

func main(): void {
  print(test());
}
