src/examples/invalid/static/redefined-function.ra
func test(): void {
  a = 1;
}

func test(): int {
  a = 1;
}

func main(): void {
  b = 2;
}
